# Ballistra

./: .cproject  .project  .styleguide  .wrproject  ADXL345_I2C_ALT.cpp  ADXL345_I2C_ALT.h  CMakeLists.txt  Claw.cpp  Claw.h  GUISettings.txt  Insight.hpp  KateKinect.cpp  KateKinect.hpp  PIDController.cpp  PIDController.hpp  README.md  Robot.cpp  Robot.hpp  RobotKinect.cpp  RobotKinect.hpp  RobotPosition.cpp  RobotPosition.hpp  RobotSettings.txt  Settings.cpp  Settings.hpp  build.gradle  fix-spacing.sh  robot.cpp  robot.hpp  send-robot-settings.sh
AutonomousModes/: AutonMotionProfile.cpp  DriveForwardAuton.cpp  RightLeftAuton.cpp  SideAuton.cpp
LibelleLogger/: LibelleLogger.cpp  LibelleLogger.h
LiveGrapherHost/: GraphHost.cpp
LiveGrapherHost/graphhost_impl/: graphhost.c  graphhost.h  graphtest.c
Logging/: LogEvent.cpp  LogEvent.h  LogServerSink.cpp
MotionProfile/: TrapezoidProfile.cpp  TrapezoidProfile.hpp
Subsystems/: Claw.cpp  Claw.hpp  DriveTrain.cpp  DriveTrain.hpp  GearBox.hpp  GearBox.inl
src/: AutonContainer.hpp  AutonContainer.inl  DriverStationDisplay.hpp  DriverStationDisplay.inl  PIDController.cpp  PIDController.hpp  Robot.cpp  Robot.hpp  RobotKinect.cpp  RobotKinect.hpp  Settings.cpp  Settings.hpp
src/AutonomousModes/: AutonMotionProfile.cpp  DriveForwardAuton.cpp  NoopAuton.cpp  RightLeftAuton.cpp  SideAuton.cpp
src/Logging/: LogConsoleSink.cpp  LogConsoleSink.h  LogConsoleSink.hpp  LogEvent.cpp  LogEvent.h  LogEvent.hpp  LogFileSink.cpp  LogFileSink.h  LogFileSink.hpp  LogServerSink.cpp  LogServerSink.h  LogServerSink.hpp  LogSinkBase.cpp  (+14 more)
(+26 files in other folders)
